Closed Bug 1694616 Opened 5 years ago Closed 5 years ago

Don't use FunctionRef in MutationObservers.

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: emilio, Assigned: emilio)

Details

Attachments

(2 files)

No description provided.

FunctionRef is so easily inlineable, looking at the comments in D95354.
This also removes some duplication, so it's win-win.

I fixed the assertion to restore the original meaning, since it seems it
was accidentally changed in that revision.

Also added some comments on why the different ordering for removals and
non-removals.

We don't override any of the methods. I wonder when this stopped being
useful, it seemed useless before bug 1420547 already, and the comment
oes back to bug 342062...

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/32dbd706ce4e Document doesn't need to inherit from nsStubMutationObserver. r=smaug
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a46e483b3ae0 Don't use FunctionRef in MutationObservers. r=smaug
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: