Bug 1694616 - Document doesn't need to inherit from nsStubMutationObserver. r=smaug

We don't override any of the methods. I wonder when this stopped being
useful, it seemed useless before bug 1420547 already, and the comment
oes back to bug 342062...

Differential Revision: https://phabricator.services.mozilla.com/D106268